# splittor

./: .gitignore  CMakeLists.txt  README.md  xtensor_demo.cpp
benchmark/: generate_input_files.py  generate_uneven_files.py  ghia.py  plot_solution.py  plot_uneven.py
benchmark/Re10/: grid.txt
benchmark/Re100/: grid.txt  probleminformation.txt
benchmark/Re1000/: grid.txt  probleminformation.txt
benchmark/Re400/: grid.txt  probleminformation.txt
benchmark/uneven100/: grid.txt
scratch/: generate_input_files.py  grid.txt  piso.ipynb  plot_solution.py  probleminformation.txt  projection_method.ipynb
src/: CalcCorrectVelocity.cpp  CalcIntermediateVelocity.cpp  CalcIntermediateVelocity.hpp  CalcPressure.cpp  CalcPressure.hpp  Constants.hpp  InputProcessor.cpp  InputProcessor.hpp  InputReader.cpp  InputReader.hpp  PISO.cpp  PISO.hpp  SolveSteadyState.cpp  SolveSteadyState.hpp  SolveTransient.hpp  SolverPoisson.cpp  SolverPoisson.hpp  Types.hpp  Utilities.cpp  Utilities.hpp  VelocityProjection.cpp  VelocityProjection.hpp  WriteFiles.cpp  WriteFiles.hpp  main.cpp  splittor.cpp
testdata/: grid332.txt  gridnocontents.txt  gridnoheader.txt  lid_grid.txt  lid_probleminformation.txt  probleminformation.txt
unit_tests/: testDummy.cpp  testInput.cpp  testInputProcessor.cpp  testInputReader.cpp  testPISO.cpp  testPressureCalculations.cpp  testSolverPoisson.cpp  testVelocityCalculations.cpp
